RESOLVED FIXED191578
[GStreamer][MSE][Debug] Several debug tests are crashing after r238084
https://bugs.webkit.org/show_bug.cgi?id=191578
Summary [GStreamer][MSE][Debug] Several debug tests are crashing after r238084
Attachments
Patch (2.35 KB, patch)
2018-11-16 05:09 PST, Alicia Boya García
no flags
Patch (2.62 KB, patch)
2018-11-16 09:24 PST, Alicia Boya García
no flags
Xabier Rodríguez Calvar
Comment 1 2018-11-12 22:41:24 PST
Both GTK and WPE Debug testing bots are unhappy.
Alicia Boya García
Comment 2 2018-11-13 10:36:56 PST
Caps notifications are being emitted from the main thread when setting the pipeline to NULL state, unexpectedly (therefore the failed assertion). The weird part is that so far this is only happening in the bots, even though we I am running supposedly the same GStreamer version from the jhbuild, with the same WebKit commit and the same test. It may be worth it to investigate why it only fails in the bots. As for actually fixing the assertion error, all event handlers should be disconnected before tearing down the pipeline.
Alicia Boya García
Comment 3 2018-11-16 05:02:48 PST
I've been able to reproduce the issue reliably after updating my system to F29... or maybe just the moons moved to the correct place. Either way, the error makes sense, here is a patch:
Alicia Boya García
Comment 4 2018-11-16 05:09:37 PST
Xabier Rodríguez Calvar
Comment 5 2018-11-16 09:17:45 PST
Comment on attachment 355044 [details] Patch We are assuming that isMainThread() => !caps, which I think is dangerous. We should at least ASSERT on that
Alicia Boya García
Comment 6 2018-11-16 09:24:53 PST
WebKit Commit Bot
Comment 7 2018-11-16 10:14:52 PST
Comment on attachment 355065 [details] Patch Clearing flags on attachment: 355065 Committed r238287: <https://trac.webkit.org/changeset/238287>
WebKit Commit Bot
Comment 8 2018-11-16 10:14:54 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2018-11-16 10:15:29 PST
Note You need to log in before you can comment on or make changes to this bug.